--- a/Ch4/index.html
+++ b/Ch4/index.html
@@ -30,10 +30,11 @@
            milk and honey.</p>
 
     <p>
-        <a href="mission.html">Read about our Mission</a>.
+        <a href="mission.html"
+           title="Read more about Starbuzz Coffee's important mission.">Read about our Mission</a>.
         <br />
         Read the <a href="http://wickedlysmart.com/buzz" 
-                    title="Read all about the caffeine on the Buzz">Caffeine Buzz</a>.
+                    title="Read all about the caffeine on the Buzz.">Caffeine Buzz</a>.
     </p>
 
   </body>
