--- a/Ch4/index.html
+++ b/Ch4/index.html
@@ -33,7 +33,7 @@
         <a href="mission.html"
            title="Read more about Starbuzz Coffee's important mission.">Read about our Mission</a>.
         <br />
-        Read the <a href="http://wickedlysmart.com/buzz/#Coffee" 
+        Read the <a target="_blank" href="http://wickedlysmart.com/buzz/#Coffee" 
                     title="Read all about the caffeine on the Buzz.">Caffeine Buzz</a>.
     </p>
 
