--- a/Ch5/mypod/index.html
+++ b/Ch5/mypod/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <p>
+        <img src="logo/mypod.png" alt="myPod Logo" />
+    </p>
+
     <h1>Welcome to myPod</h1>
     <p>
         Welcome to the place to show off your iPod, wherever you might be.
