--- a/Ch7/beverages/elixir.html
+++ b/Ch7/beverages/elixir.html
@@ -1,9 +1,10 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Head First Lounge Elixirs</title>
-  </head>
+    <link type="text/css" rel="stylesheet" href="../lounge.css" />
+</head>
   <body>
     <h1>Our Elixirs</h1>
 
