--- a/Ch7/lounge.html
+++ b/Ch7/lounge.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Head First Lounge</title>
-
-    <style>
-
-    </style>
-
+    <link type="text/css" rel="stylesheet" href="lounge.css" />
 </head>
 <body>
     <h1>Welcome to the New and Improved Head First Lounge</h1>
