added journal.css specified font for journal.html

--- a/Ch8/journal.html
+++ b/Ch8/journal.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>My Trip Around the USA on a Segway</title>
     <link type="text/css" rel="stylesheet" href="journal.css">
-  </head>
+    <title>My Trip Around the USA on a Segway</title>
+</head>
   <body>
 
     <h1>Segway'n USA</h1>
