--- a/Ch12/blog.html
+++ b/Ch12/blog.html
@@ -59,9 +59,9 @@
                           out my video of our new invetion.
                       </p>
                       <video controls autoplay width="512" height="288">
-                          <source src="video/tweetsip.mp4">
-                          <source src="video/tweetsip.webm">
-                          <source src="video/tweetsip.ogv">
+                          <source src="video/tweetsip.mp4" type='video/m4v; codecs="avc1.42E01E, mp4a.40.2"'>
+                          <source src="video/tweetsip.webm" type='video/webm; codecs="vp8, vorbis"'>
+                          <source src="video/tweetsip.ogv" type='video/ogg; codecs="theora, vorbis"'>
                           <p>Sorry, your browser doesn't support the video element</p>
                       </video>
                   </article>
