added flash functionality to video

--- a/Ch12/blog.html
+++ b/Ch12/blog.html
@@ -62,6 +62,7 @@
                           <source src="video/tweetsip.mp4" type='video/m4v; codecs="avc1.42E01E, mp4a.40.2"'>
                           <source src="video/tweetsip.webm" type='video/webm; codecs="vp8, vorbis"'>
                           <source src="video/tweetsip.ogv" type='video/ogg; codecs="theora, vorbis"'>
+                          <object>...</object>
                           <p>Sorry, your browser doesn't support the video element</p>
                       </video>
                   </article>
