--- a/Ch13/table.html
+++ b/Ch13/table.html
@@ -9,6 +9,10 @@
   </head>
   <body>
       <table>
+          <caption>
+              The cities I visited on my
+              Segway'n USA travels
+          </caption>
           <tr>
               <th>City</th>
               <th>Date</th>
