--- a/Ch13/journal.html
+++ b/Ch13/journal.html
@@ -42,51 +42,51 @@
           </tr>
           <tr>
               <td>Walla Walla, WA</td>
-              <td>June 15th</td>
-              <td>75</td>
-              <td>1,204 ft</td>
-              <td>29,686</td>
-              <td>4/5</td>
+              <td class="centered">June 15th</td>
+              <td class="centered">75</td>
+              <td class="right">1,204 ft</td>
+              <td class="right">29,686</td>
+              <td class="centered">4/5</td>
           </tr>
           <tr>
               <td>Magic City, ID</td>
-              <td>June 25th</td>
-              <td>74</td>
-              <td>5,312 ft</td>
-              <td>50</td>
-              <td>3/5</td>
+              <td class="centered">June 25th</td>
+              <td class="centered">74</td>
+              <td class="right">5,312 ft</td>
+              <td class="right">50</td>
+              <td class="centered">3/5</td>
           </tr>
           <tr>
               <td>Bountiful, UT</td>
-              <td>July 10th</td>
-              <td>91</td>
-              <td>4,226 ft</td>
-              <td>41,173</td>
-              <td>4/5</td>
+              <td class="centered">July 10th</td>
+              <td class="centered">91</td>
+              <td class="right">4,226 ft</td>
+              <td class="right">41,173</td>
+              <td class="centered">4/5</td>
           </tr>
           <tr>
               <td>Last Chance, CO</td>
-              <td>July 23rd</td>
-              <td>102</td>
-              <td>4,780 ft</td>
-              <td>265</td>
-              <td>3/5</td>
+              <td class="centered">July 23rd</td>
+              <td class="centered">102</td>
+              <td class="right">4,780 ft</td>
+              <td class="right">265</td>
+              <td class="centered">3/5</td>
           </tr>
           <tr>
               <td>Truth or Consequences, NM</td>
-              <td>August 9th</td>
-              <td>93</td>
-              <td>4,242 ft</td>
-              <td>7,289</td>
-              <td>5/5</td>
+              <td class="centered">August 9th</td>
+              <td class="centered">93</td>
+              <td class="right">4,242 ft</td>
+              <td class="right">7,289</td>
+              <td class="centered">5/5</td>
           </tr>
           <tr>
               <td>Why, AZ</td>
-              <td>August 18th</td>
-              <td>104</td>
-              <td>860 ft</td>
-              <td>480</td>
-              <td>3/5</td>
+              <td class="centered">August 18th</td>
+              <td class="centered">104</td>
+              <td class="right">860 ft</td>
+              <td class="right">480</td>
+              <td class="centered">3/5</td>
           </tr>
       </table>
 
