added background color to table header and rows

--- a/Ch13/journal.html
+++ b/Ch13/journal.html
@@ -48,7 +48,7 @@
               <td class="right">29,686</td>
               <td class="centered">4/5</td>
           </tr>
-          <tr>
+          <tr class="cellcolor">
               <td>Magic City, ID</td>
               <td class="centered">June 25th</td>
               <td class="centered">74</td>
@@ -64,7 +64,7 @@
               <td class="right">41,173</td>
               <td class="centered">4/5</td>
           </tr>
-          <tr>
+          <tr class="cellcolor">
               <td>Last Chance, CO</td>
               <td class="centered">July 23rd</td>
               <td class="centered">102</td>
@@ -80,7 +80,7 @@
               <td class="right">7,289</td>
               <td class="centered">5/5</td>
           </tr>
-          <tr>
+          <tr class="cellcolor">
               <td>Why, AZ</td>
               <td class="centered">August 18th</td>
               <td class="centered">104</td>
