--- a/Ch13/journal.html
+++ b/Ch13/journal.html
@@ -73,12 +73,19 @@
               <td class="centered">3/5</td>
           </tr>
           <tr>
-              <td>Truth or Consequences, NM</td>
+              <td rowspan="2">Truth or Consequences, NM</td>
               <td class="centered">August 9th</td>
               <td class="centered">93</td>
-              <td class="right">4,242 ft</td>
-              <td class="right">7,289</td>
+              <td rowspan="2" class="right">4,242 ft</td>
+              <td rowspan="2" class="right">7,289</td>
               <td class="centered">5/5</td>
+          </tr>
+          <tr>
+              
+              <td class="centered">August 27th</td>
+              <td class="centered">98</td>
+
+              <td class="centered">4/5</td>
           </tr>
           <tr class="cellcolor">
               <td>Why, AZ</td>
