added table in table and styled it

--- a/Ch13/journal.html
+++ b/Ch13/journal.html
@@ -85,7 +85,18 @@
               <td class="centered">August 27th</td>
               <td class="centered">98</td>
 
-              <td class="centered">4/5</td>
+              <td>
+                  <table>
+                      <tr>
+                          <th>Tess</th>
+                          <td>5/5</td>
+                      </tr>
+                      <tr>
+                          <th>Tony</th>
+                          <td>4/5</td>
+                      </tr>
+                  </table>
+              </td>
           </tr>
           <tr class="cellcolor">
               <td>Why, AZ</td>
